# tqsl-libtqsl

./: CMakeLists.txt  README.md  linux-cmake.sh  macos-cmake.sh
src/: CMakeLists.txt  converter.cpp  tqslconvert.cpp  tqsllib.cpp
